defconfig: deactivate CPU_BOOST and SMART_BOOST and regen
Change-Id: Id322a54543a7dbb80e703e718be265856cb3ef25

--- a/arch/arm64/configs/enchilada_defconfig
+++ b/arch/arm64/configs/enchilada_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.223 Kernel Configuration
+# Linux/arm64 4.9.227 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -658,7 +658,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 #
@@ -4901,7 +4901,7 @@ CONFIG_OPCHAIN=y
 CONFIG_ADJ_CHAIN=y
 CONFIG_HOUSTON=y
 CONFIG_MEMPLUS=y
-CONFIG_SMART_BOOST=y
+# CONFIG_SMART_BOOST is not set
 CONFIG_OEM_DEBUG_SUPPORT=y
 CONFIG_OEM_SYSRQ_X=y
 CONFIG_OEM_TRACE_SUPPORT=y
